# istad.tech-brary

./: .gitignore  CMakeLists.txt  README.md  animation.cpp  main.c++  main.cpp
data/: accounts.xlsx
data/book/: book.cpp
data/security/: adminPwd.cpp  hidePwd.cpp  librarianPwd.cpp  password.cpp  userPwd.cpp
include/: Admin.h++  Colors.h++  Colors.hpp  Label.h++  Label.hpp  Librarian.h++  Librarian.hpp  Logger.h++  Login.h++  Menu.hpp  User.hpp
include/book/: Book.hpp
include/core/: Admin.hpp  ExcelUtils.hpp  History.hpp  Librarian.hpp  LogIn.hpp  User.hpp
include/security/: AdminPwd.hpp  HidePwd.hpp  LibrarianPwd.hpp  Password.hpp  UserPwd.hpp
include/ui/: Animation.hpp  Colors.hpp  Label.hpp  LabelMenu.hpp
include/utils/: Logger.hpp
include/validation/: Validation.hpp
src/: Login.c++  admin.c++  librarian.c++  librarian.cpp  menu.cpp  user.c++  user.cpp
src/core/: admin.cpp  excelUtils.cpp  librarian.cpp  logIn.cpp  signUp.cpp  user.cpp
src/ui/: animation.cpp  label.cpp  labelMenu.cpp  menu.cpp
src/utils/: logger.cpp
src/validation/: validation.cpp
